--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About Me</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 2rem;
+      line-height: 1.6;
+    }
+    h1 {
+      color: #2c3e50;
+    }
+    a {
+      color: #3498db;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <h1>Hello, I'm Moritz 👋</h1>
+  <p>
+    Welcome to my personal page! I'm a software developer with interests in topics like WebAssembly, Rust, Python and Java.
+  </p>
+  <p>
+    This page is hosted using <a href="https://pages.github.com/">GitHub Pages</a>. I'm passionate about open-source, learning new technologies, and building cool stuff.
+  </p>
+  <h2>🔗 Links</h2>
+  <ul>
+    <li><a href="https://github.com/BrftM">GitHub</a></li>
+    <li><a href="www.linkedin.com/in/mbroft">LinkedIn</a></li>
+  </ul>
+</body>
+</html>
