--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     Welcome to my personal page! I'm a software developer with interests in topics like WebAssembly, Rust, Python and Java.
   </p>
   <p>
-    This page is hosted using <a href="https://pages.github.com/">GitHub Pages</a>. I'm passionate about open-source, learning new technologies, and building cool stuff.
+    This page is hosted using <a href="https://pages.github.com/">GitHub Pages</a> and for test purposes. I'm passionate about open-source, learning new technologies, and building cool stuff.
   </p>
   <h2>🔗 Links</h2>
   <ul>
